@@ -24,6 +24,8 @@ mountall (0.2.0) UNRELEASED; urgency=low
   * Fixed issue with trailing slashes.  LP: #443035.
   * Only run hooks if the filesystem was not already mounted.  LP: #444252.
   * Ignore loop and ram devices until ready.  LP: #441454.
+  * Add options to binfmt_misc filesystem, which will probably cause it to
+    be mounted on boot as well.
 
  -- Scott James Remnant <scott@ubuntu.com>  Wed, 07 Oct 2009 17:30:21 +0100
 
